added projects section

--- a/landingpage/templates/landingpage/index.html
+++ b/landingpage/templates/landingpage/index.html
@@ -36,51 +36,51 @@
         </p>
       </div>
 
-    </section><!-- End Hero -->
+  </section><!-- End Hero -->
 
-    <!-- ======= About Section ======= -->
-    <section id="about" class="about"data-aos="fade-in">
-      <div class="container">
+  <!-- ======= About Section ======= -->
+  <section id="about" class="about" data-aos="fade-in">
+    <div class="container">
 
-        <div class="section-title">
-          <h2>About</h2>
-          <p>
-            Fresher with in-depth knowledge of languages and development tools. 
-            I am skilled at working and collaborating with teams. Looking to start the career
-            in an entry-level position to prove my abilities. 
-          </p>
-        </div>
-        <div class="col-xl-12 col-lg-8 col-md-8 pt-4 pt-lg-0 content" data-aos="fade-in">
-          <h3>Software Developer.</h3>
-          <p class="font-italic">
-            I'm pre final year engineering student. Self taught Software Developer. I post and share content related
-            to Python, Django and much more.
-          </p>
-          <div class="row">
-            <div class="col-lg-6">
-              <ul>
-                <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 18th Dec 1999</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> www.amangoyal.ml</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +91 8076968355</li>
-                <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Delhi, In</li>
-              </ul>
-            </div>
-            <div class="col-lg-6">
-              <ul>
-                <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 21</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Bachelor's (Persuing)</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> amangoyal8110@gmail.com</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Freelance:</strong> Available</li>
-              </ul>
-            </div>
-          </div>
-          <p>I love reading,
-            creating new stuff every day. Curiosity drives me.
-            Always up for new challenges. I am quick to learn
-            and willing to adapt to any job.
-          </p>
-        </div>
+      <div class="section-title">
+        <h2>About</h2>
+        <p>
+          Fresher with in-depth knowledge of languages and development tools.
+          I am skilled at working and collaborating with teams. Looking to start the career
+          in an entry-level position to prove my abilities.
+        </p>
       </div>
+      <div class="col-xl-12 col-lg-8 col-md-8 pt-4 pt-lg-0 content" data-aos="fade-in">
+        <h3>Software Developer.</h3>
+        <p class="font-italic">
+          I'm pre final year engineering student. Self taught Software Developer. I post and share content related
+          to Python, Django and much more.
+        </p>
+        <div class="row">
+          <div class="col-lg-6">
+            <ul>
+              <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 18th Dec 1999</li>
+              <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> www.amangoyal.ml</li>
+              <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +91 8076968355</li>
+              <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Delhi, In</li>
+            </ul>
+          </div>
+          <div class="col-lg-6">
+            <ul>
+              <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 21</li>
+              <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Bachelor's (Persuing)</li>
+              <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> amangoyal8110@gmail.com</li>
+              <li><i class="icofont-rounded-right"></i> <strong>Freelance:</strong> Available</li>
+            </ul>
+          </div>
+        </div>
+        <p>I love reading,
+          creating new stuff every day. Curiosity drives me.
+          Always up for new challenges. I am quick to learn
+          and willing to adapt to any job.
+        </p>
+      </div>
+    </div>
 
     </div>
   </section><!-- End About Section -->
@@ -276,136 +276,40 @@
   </section><!-- End Skills Section -->
 
   <!-- ======= Portfolio Section ======= -->
-  <!--
-    
-  <!--
+
   <section id="portfolio" class="portfolio section-bg">
-      <div class="container">
+    <div class="container">
 
-        <div class="section-title">
-          <h2>Portfolio</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-            consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
-            in iste officiis commodi quidem hic quas.</p>
-        </div>
+      <div class="section-title">
+        <h2>Projects</h2>
+        <!--<p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
+              consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
+              in iste officiis commodi quidem hic quas.</p>-->
+      </div>
 
-        <div class="row" data-aos="fade-up">
-          <div class="col-lg-12 d-flex justify-content-center">
-            <ul id="portfolio-flters">
-              <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">App</li>
-              <li data-filter=".filter-card">Card</li>
-              <li data-filter=".filter-web">Web</li>
-              <li data-filter=".filter-text">Text</li>
-            </ul>
+      <!--
+          <div class="row" data-aos="fade-up">
+            <div class="col-lg-12 d-flex justify-content-center">
+              <ul id="portfolio-flters">
+                <li data-filter="*" class="filter-active">All</li>
+                <li data-filter=".filter-app">App</li>
+                <li data-filter=".filter-card">Card</li>
+                <li data-filter=".filter-web">Web</li>
+                <li data-filter=".filter-text">Text</li>
+              </ul>
           </div>
         </div>
+      -->
 
-        <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-text">
-            <div class="portfolio-wrap">
-              <img src="{% static 'landingpage/img/portfolio/portfolio-1.jpg' %}" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="{% static 'landingpage/img/portfolio/portfolio-1.jpg' %}" data-gall="portfolioGallery"
-                  class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
-                <a href="/portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
-              <img src="{% static 'landingpage/img/portfolio/portfolio-2.jpg' %}" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="{% static 'landingpage/img/portfolio/portfolio-2.jpg' %}" data-gall="portfolioGallery"
-                  class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
-              <img src="{% static 'landingpage/img/portfolio/portfolio-3.jpg' %}" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="{% static 'landingpage/img/portfolio/portfolio-3.jpg' %}" data-gall="portfolioGallery"
-                  class="venobox" title="App 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-wrap">
-              <img src="{% static 'landingpage/img/portfolio/portfolio-4.jpg' %}" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="{% static 'landingpage/img/portfolio/portfolio-4.jpg' %}" data-gall="portfolioGallery" class="venobox"
-                  title="Card 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-5.jpg" data-gall="portfolioGallery" class="venobox"
-                  title="Web 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-6.jpg" data-gall="portfolioGallery" class="venobox"
-                  title="App 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-7.jpg" data-gall="portfolioGallery" class="venobox"
-                  title="Card 1"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-8.jpg" data-gall="portfolioGallery" class="venobox"
-                  title="Card 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-9.jpg" data-gall="portfolioGallery" class="venobox"
-                  title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-        </div>
+      <div class="row portfolio-container" data-aos="" data-aos-delay="">
+        {% for project in project_data %}
+        {% include 'landingpage/snippets/project_card.html' with heading=project.heading url=project.image_link live_link=project.live_link details_link=project.details_link %}
+        {% endfor %}
 
       </div>
-    </section> -->
+
+    </div>
+  </section> -->
   <!-- End Portfolio Section -->
 
   <!-- ======= Services Section ======= -->
@@ -540,7 +444,7 @@
 
       </div>
     </section> -->
-  <!-- End Testimonials Section -->
+  <!-- End Testimonials Section
 
   <!-- ======= Contact Section ======= -->
   <section id="contact" class="contact">
