added projects section

--- a/landingpage/templates/landingpage/index.html
+++ b/landingpage/templates/landingpage/index.html
@@ -277,7 +277,7 @@
 
   <!-- ======= Portfolio Section ======= -->
 
-  <section id="portfolio" class="portfolio section-bg">
+  <section id="projects" class="portfolio section-bg">
     <div class="container">
 
       <div class="section-title">
