--- a/landingpage/templates/landingpage/base.html
+++ b/landingpage/templates/landingpage/base.html
@@ -81,7 +81,7 @@
                     <li><a href="{% url 'home' %}#stats"><i class="bx bx-stats"></i> <span>Stats</span></a></li>
                     <li><a href="{% url 'home' %}#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
                     <li><a href="{% url 'home' %}#skills"><i class="bx bx-bulb"></i> <span>Skills</span></a></li>
-                    <!-- <li><a href="#services"><i class="bx bx-server"></i> Services</a></li> -->
+                    <li><a href="{% url 'home' %}#projects"><i class="bx bx-server"></i> Projects</a></li>
                     <li><a href="{% url 'home' %}#contact"><i class="bx bx-envelope"></i> Contact</a></li>
                     <hr color="grey">
                     <li><a href="{% url 'timeline-home' %}"><i class="bx bx-book-content"></i> Timeline</a></li>
