--- a/landingpage/templates/landingpage/snippets/project_card.html
+++ b/landingpage/templates/landingpage/snippets/project_card.html
@@ -4,7 +4,7 @@
 
         <!-- TODO : add defualt image url -->
         <!-- THIS IS PROJECT THUMBNAIL -->
-        <img src={{url}} class="img-fluid" alt="">
+        <img src={{url}} class="img-fluid" alt="" style="border-top-left-radius: 10px; border-top-right-radius: 10px;">
 
 
         <div class="portfolio-links">
