--- a/landingpage/templates/landingpage/index.html
+++ b/landingpage/templates/landingpage/index.html
@@ -294,7 +294,7 @@
       </div>
 
     </div>
-  </section> -->
+  </section> 
   <!-- End Portfolio Section -->
 
   <!-- ======= Services Section ======= -->
