added resume link on Hero section [fixed]

--- a/landingpage/templates/landingpage/index.html
+++ b/landingpage/templates/landingpage/index.html
@@ -5,10 +5,14 @@
 <!-- ======= Hero Section ======= -->
 <main id="main">
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
+
     <div class="hero-container" data-aos="fade-in">
       <h1>Aman Goyal</h1>
+      <a href="www.google.com">Download Resume</a>
+      <br>
       <p>I'm <span class="typed" data-typed-items="Developer, Developer, Engineer, Student"></span></p>
     </div>
+
 
     <div class="social-icons" data-aos="fade-in">
       <a class="social-icon" href="https://www.linkedin.com/in/ln-amangoyal/"><i class="fab fa-linkedin-in"></i></a>
@@ -294,7 +298,7 @@
       </div>
 
     </div>
-  </section> 
+  </section>
   <!-- End Portfolio Section -->
 
   <!-- ======= Services Section ======= -->
